tests/semantic/invalid/65_i8_attr_infer_mismatch.hulk
class C {
    n: String = 0;
}
